# cross-platform

./: CMakeLists.txt  main.c
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/jni/: CMakeLists.txt  main.c
web/: CMakeLists.txt  index.html
